# delta-formulation

./: .gitignore  README.md
doc/common/: literature_references.bib
doc/delta_formulation_content/chapters/: diagonalise_1d_swe.tex  introduction.tex  space_discretisation.tex  time_integration.tex
doc/delta_formulation_content/common/: literature_references.bib
doc/delta_formulation_content/figures/: 1d-integration.pdf_tex  two_step_approach.tex
doc/delta_formulation_doc/: delta_formulation_content.tex
doc/delta_formulation_doc/chapters/: 1d_diagonalise_swe.tex  1d_error_estimation.tex  1d_numerical_experiments.tex  1d_shallow_water_equations.tex  2d_numerical_experiments.tex  2d_regularization.tex  2d_shallow_water_equations.tex  2d_shallow_water_equations_gray.tex  coordinate_transform.tex  (+13 more)
doc/issues/: issues.ods
doc/manual/: manual.tex
doc/test_doc/: test_cases.tex
src/c++/1d/burgers_equation/: CMakeLists.txt  build_msvc.cmd  burgers_eq.sln
src/c++/1d/burgers_equation/doc/: burgers_equation_fve.tex
src/c++/1d/burgers_equation/doc/chapters/: appendix.tex  burgers_equation.tex  burgers_equation_numerical_experiments.tex  burgers_numerical_experiments.tex
src/c++/1d/burgers_equation/scripts/: git_insert_hash.cmd
src/c++/2d/heat_2d/: CMakeLists.txt  build_msvc.cmd  copy_exe_to_testbench.bat  heat_2d.sln
src/c++/2d/heat_2d/doc/: delta_formulation_heat_2d.tex
src/c++/2d/heat_2d/doc/chapters/: heat_2d_equations.tex
src/c++/2d/heat_2d/doc/figures/: cartesian_grid_along_straight_boundary_essential.pdf_tex  cartesian_grid_along_straight_boundary_essential_natural_2.pdf_tex  cartesian_grid_at_corner_point_essential.pdf_tex
src/c++/2d/heat_2d/scripts/: git_insert_hash.cmd
src/python/: accuracy_table.py  area_polygon_gui.py  compatible_initial_function.py  grid_points_and_cell_centre.py  grid_points_and_cell_centre_optimal.py  initial_condition_scalar.py  reg_1d_scalar.py  reg_1d_scalar_gui.py  reg_1d_step_less_error_when_more_smoothing.py  regularization_1d_step_function.py  regularization_error_u_giv_u.py  regularization_function.py  regularization_ratio_u_giv_u.py  ugp_and_ucc.py  ugp_and_ucc_optimal.py  ugp_and_ucc_with_splines.py
(+586 files in other folders)
